# hpc-miniweather

./: .gitignore  README.md
.github/workflows/: deploy.yml
source/: .gitignore  CMakeLists.txt  run.sh  submit.sbatch
source/.github/workflows/: ci.yml
source/Cmake/toolchain/: clang.cmake  cuda.cmake  gcc.cmake  hip.cmake
source/docs/: ARCHITECTURE.md  README.md  RESULTS.md  SYSTEM.md  eurohpc_proposal.md  paper.md  pitch_slides.md  problem_statement.md  reproduce.md
source/env/: environment.yml  miniweather.def  modules.txt
source/include/: cli.hpp  config.hpp  halo.hpp  stencil.hpp  timer.hpp
source/scripts/: collect_results.py  make_run_examples.sh  plot_results.py  submit_cpu.slurm  submit_gpu.slurm  submit_parallel.slurm  submit_scale.slurm  submit_serial.slurm  visualize_weather.py
source/scripts/env/: modules.md
source/slurm/: profile_cpu.sbatch  profile_gpu.sbatch  run_all_experiments.sbatch  run_multi_cpu.sbatch  strong_scaling.sbatch  weak_scaling.sbatch
source/src/: cli.cpp  cli.hpp  halo.cpp  main.cpp  stencil_cpu.cpp  stencil_cpu_blocked.cpp  stencil_cpu_parallel.cpp  stencil_cpu_serial.cpp  stencil_gpu.cu  timer.cpp
source/tests/: sanity_16^3.sh
web/: course.html  index.html  project.html  source-overview.html  style.css
web/src/: app.js  sim.js
